# RUST-URL-SHORTENER

./: .gitignore  Cargo.toml  README.md
migrations/: 20240409173947_links.down.sql  20240410153842_links.up.sql  20240412065244_link_staticstics.up.sql
src/: main.rs  routes.rs  utils.rs
